--- a/dashboard_web/static/css/custom.css
+++ b/dashboard_web/static/css/custom.css
@@ -2,9 +2,9 @@ body {
   margin: 0;
   height:100%;
   padding-bottom: 15px;
-  color: lightcyan;
+  color: black;
   background-color: #f0f0f2;
-  background-color:#15202b;
+  /* background-color:#15202b; */
   /* background-image: -webkit-linear-gradient( 136deg, rgb(0,0,70) 0%, rgb(28,181,224) 100%); */
   position: relative;
   min-height: 100vh;
@@ -12,8 +12,25 @@ body {
 footer {
   margin-top:5px;
 }
-.card{
-  background-color:#253341  
+#myGrid{
+  border:2px solid black;
+  height:140vh;
+  
+}
+.grid-container{
+  overflow-y: auto;
+  max-height:80vh;
+}
+/* .chart-container{
+  height:100vh;
+} */
+#myChart{
+  border-radius: 14px;
+  background: #c0c0c0;
+  box-shadow:  5px 5px 10px #888888, 
+               -5px -5px 10px #f8f8f8;
+  /* padding:2px; */
+  margin-bottom:10px;
 }
 .feed{
   color:#ffff;
@@ -99,19 +116,7 @@ footer a {
   text-decoration: none;
   color: #303030;
 }
-.story-img{
-  min-width: 150px;
-  min-height:150px;
-  max-height:200px;
-  max-width:350px;
-}
-.blur{
-  position: absolute;
-  /* filter: blur(6px);
-  -webkit-filter: blur(6px); */
-  width:100%;
-  height:100%;
-}
+
 
   .page-content{
   padding:50px;
