--- a/dashboard_web/static/css/custom.css
+++ b/dashboard_web/static/css/custom.css
@@ -9,17 +9,50 @@ body {
   position: relative;
   min-height: 100vh;
 }
+@media print {
+  body * {
+    visibility: hidden;
+  }
+  #section-to-print, #section-to-print * {
+    visibility: visible;
+  }
+  #section-to-print {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+}
 footer {
   margin-top:5px;
 }
+@font-face {
+  font-family: Roboto;
+  src: url(Roboto-Medium.ttf);
+}
 #myGrid{
-  border:2px solid black;
+
+  /* padding:2px; */
+  margin-bottom:10px;
   height:140vh;
   
 }
+.fa-input { font-family: FontAwesome, ‘Helvetica Neue’, Helvetica, Arial, sans-serif; }
+.date-container{
+  border-radius: 7px;
+  background: linear-gradient(145deg, #e6e6e6, #ffffff);
+  box-shadow:  5px 5px 0px #bdbdbd, 
+               -5px -5px 0px #ffffff;
+  padding:10px;
+  width:200px;
+}
 .grid-container{
   overflow-y: auto;
-  max-height:80vh;
+  max-height:100vh;
+  border-radius: 14px;
+  background: #fffbfb;
+  box-shadow:  5px 5px 10px #888888, 
+               -5px -5px 10px #f8f8f8;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 /* .chart-container{
   height:100vh;
@@ -32,75 +65,13 @@ footer {
   /* padding:2px; */
   margin-bottom:10px;
 }
-.feed{
-  color:#ffff;
-  max-width:75%;
-  max-height:30%;
-  margin-left:auto;
-  margin-right:auto;
+.gen-select li{
+  display:inline;
 }
-.profile_pic img{
-  width: 50px;
-  height:50px;
-  border-radius: 25px;
-}
-.story_pic {
-  max-width:350px;
-  max-height:350px;
-  margin-bottom:5px;
-  margin-left:auto;
-  margin-right:auto;
-  border-radius:10px;
-}
-.feed_story{
-  border: 3px solid white;
-}
-.login-logo{
-  font-family: 'Economica',Calibri;
-  font-size: 40px;
-  margin-top:10vh;
-  align-items:center;
-  padding-top:50px;
-  background-color: rgb(0,0,70,0.8);
-  border-radius: 10px;;
-  border:4px solid whitesmoke;
-  width:200px;
-  height:336px;
-}
-.login-logo img{
-  width:80px; height:80px;
-  padding:10px;
-  border-radius: 35px;
-  background: #f09433; 
-  background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
-  background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
-  background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
-}
-
-.navlogo{
-  font-family: 'Fredoka One', Calibri;
-}
-
-.bg-image{
-  background-image: url("../klcc.jpg"); 
-  /* filter: blur(8px);
-  -webkit-filter: blur(8px); */
-
-  /* Full height */
-  height: 100%;
-  background-position: left;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.edit-form form{
-  margin-left:5px;
-  padding:20px;
-}
-.edit-form h1{
-  margin-left:10px;
-  margin-right:auto;
-  font-size: 30px;
+.gen-select{
+  text-align: center;
+  margin-left:0px;
+  padding-inline-start: 0px;
 }
 footer {
   font-size: 11px;
