added print to pdf function

--- a/dashboard_web/templates/_layout.html
+++ b/dashboard_web/templates/_layout.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="navbar-nav">
-          <button class=" ml-3 btn btn-primary" onclick="printDiv('printable')">Print</button>
+          <button class=" ml-3 btn btn-primary" id="printpdf">Print</button>
         </div>
       </div>
     </nav>
