Edit barchart, enhance Print file function

--- a/dashboard_web/blueprints/users/templates/users/index.html
+++ b/dashboard_web/blueprints/users/templates/users/index.html
@@ -16,19 +16,19 @@
 <div class = "container">
     <div class = "row">
           <div class = "col-lg-12 chart-container"> 
-            <div id="myChart" class = "bar-chart printable"></div>
+            <div id="myChart" class = "bar-chart"></div>
           </div>
     </div>
 
     <div class ="row">
           <div class = "col-lg-12 grid-container">
-              <h6 class="mt-2 text-center">kWH Records<br><span id="dateSelected"></span></h6>
+              <h6 class="mt-2 text-center">kWH Records<br><span id="dateHTML"></span></h6>
               <ul class="gen-select">
                 <li><button class="btn btn-dark gridSelect" id ="0">Generator 1</button></li>
                 <li><button class="btn btn-dark gridSelect" id ="1">Generator 2</button></li>
                 <li><button class="btn btn-dark gridSelect" id ="2">Generator 3</button></li>
               </ul>
-              <div id="myGrid" class = "bar-chart printable"></div>
+              <div id="myGrid" class = "grid bar-chart"></div>
           </div>
     </div>  <!--Put id table code here-->
 </div>
