--- a/dashboard_web/blueprints/users/templates/users/index.html
+++ b/dashboard_web/blueprints/users/templates/users/index.html
@@ -30,7 +30,7 @@
               </ul>
               <div id="myGrid" class = "grid bar-chart"></div>
           </div>
-    </div>  <!--Put id table code here-->
+    </div>  
 </div>
 
  
