--- a/dashboard_web/templates/_layout.html
+++ b/dashboard_web/templates/_layout.html
@@ -10,7 +10,7 @@
     <!-- <link rel="stylesheet" href="../static/css/vendor/bootstrap-4.1.3.css">
     <link rel="stylesheet" href="../static/css/custom.css"> -->
     {% assets "home_css" %}
-    <link rel="stylesheet" href="{{ ASSET_URL }}">
+    <!-- <link rel="stylesheet" href="{{ ASSET_URL }}"> -->
     {% endassets %}
 
   
