--- a/dashboard_web/templates/_layout.html
+++ b/dashboard_web/templates/_layout.html
@@ -10,7 +10,7 @@
     <!-- <link rel="stylesheet" href="../static/css/vendor/bootstrap-4.1.3.css">
     <link rel="stylesheet" href="../static/css/custom.css"> -->
     {% assets "home_css" %}
-    <!-- <link rel="stylesheet" href="{{ ASSET_URL }}"> -->
+    <link rel="stylesheet" href="{{ ASSET_URL }}">
     {% endassets %}
 
   
@@ -18,9 +18,9 @@
     {% endblock %}
        <!-- Script loaded here -->
        {% assets "home_js" %}
-       <!-- <script type="text/javascript" src="{{ ASSET_URL }}"></script> -->
+       <script type="text/javascript" src="{{ ASSET_URL }}"></script>
        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/js/bootstrap-datepicker.min.js"></script> -->
-       <!-- <script>zingchart.MODULESDIR="{{ url_for('static',filename='js/vendor/modules/') }}";</script> -->
+       <script>zingchart.MODULESDIR="{{ url_for('static',filename='js/vendor/modules/') }}";</script>
        <!-- test -->
        {% endassets %}
     <title>
