--- a/dashboard_web/templates/_layout.html
+++ b/dashboard_web/templates/_layout.html
@@ -16,13 +16,7 @@
   
     {% block header %}
     {% endblock %}
-       <!-- Script loaded here -->
-       {% assets "home_js" %}
-       <script type="text/javascript" src="{{ ASSET_URL }}"></script>
-       <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/js/bootstrap-datepicker.min.js"></script> -->
-       <script>zingchart.MODULESDIR="{{ url_for('static',filename='js/vendor/modules/') }}";</script>
-       <!-- test -->
-       {% endassets %}
+      <!-- Script loaded here -->
     <title>
       {% block title %}
       {% endblock %}Energy Monitor
@@ -52,7 +46,12 @@
    
     {% block content %}
     {% endblock %}
-
+    {% assets "home_js" %}
+    <!-- <script type="text/javascript" src="{{ ASSET_URL }}"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/js/bootstrap-datepicker.min.js"></script> -->
+    <!-- <script>zingchart.MODULESDIR="{{ url_for('static',filename='js/vendor/modules/') }}";</script> -->
+    <!-- test -->
+    {% endassets %}
     
 
  
