--- a/dashboard_web/blueprints/users/templates/users/index.html
+++ b/dashboard_web/blueprints/users/templates/users/index.html
@@ -16,7 +16,7 @@
 <div class = "container">
     <div class = "row">
           <div class = "col-lg-12 chart-container"> 
-            <div id="myChart" class = "bar-chart"></div>
+            <div id="myChart"></div>
           </div>
     </div>
 
