--- a/dashboard_web/static/css/custom.css
+++ b/dashboard_web/static/css/custom.css
@@ -9,19 +9,7 @@ body {
   position: relative;
   min-height: 100%;
 }
-@media print {
-  body * {
-    visibility: hidden;
-  }
-  #section-to-print, #section-to-print * {
-    visibility: visible;
-  }
-  #section-to-print {
-    position: absolute;
-    left: 0;
-    top: 0;
-  }
-}
+
 footer {
   margin-top:5px;
 }
@@ -54,9 +42,10 @@ footer {
                -5px -5px 10px #f8f8f8;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-/* .chart-container{
-  height:100vh;
-} */
+.chart-container{
+  height:120vh;
+  margin-bottom:10px;
+}
 #myChart{
   border-radius: 14px;
   background: #c0c0c0;
@@ -64,6 +53,7 @@ footer {
                -5px -5px 10px #f8f8f8;
   /* padding:2px; */
   margin-bottom:10px;
+  height:120vh;
 }
 .gen-select li{
   display:inline;
@@ -88,7 +78,7 @@ footer a {
   color: #303030;
 }
 
-
+/* 
   .page-content{
   padding:50px;
   background-image: -moz-linear-gradient( 136deg, rgb(0,0,70) 0%, rgb(28,181,224) 100%);
@@ -104,4 +94,4 @@ footer a {
 	-ms-align-items: center;
 	-moz-align-items: center;
 	-webkit-align-items: center;
-}
+} */
