--- a/dashboard_web/templates/_layout.html
+++ b/dashboard_web/templates/_layout.html
@@ -24,23 +24,27 @@
 
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand p-0" href="https://scgcontrol.com/"><img class= "rounded" width ='350' src="{{url_for('static',filename='images/SCG-Logo.jpg') }}"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+      <a class="navbar-brand" href="https://scgcontrol.com/"><img class= "rounded" width ='350' src="{{url_for('static',filename='images/SCG-Logo.jpg') }}"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-            <div class="input-group date w-100 align-items-center">
-              <input type="submit" class="form-control rounded" value="Date Select">
-              <div class="input-group-addon" >    
-                <span class=ml-1><i style="color:lightgray;font-size:25px;" aria-hidden="true" class="fa fa-calendar fa-lg"></i></span>     
-              </div>
-            </div>
-        </div>
-        <div class="navbar-nav">
-          <button class=" ml-3 btn btn-primary" id="printpdf">Print</button>
-        </div>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <!-- <span class="nav-item input-group date align-items-center"> -->
+              <!-- <span class=mr-1><i style="color:lightgray;font-size:25px;" aria-hidden="true" class="fa fa-calendar fa-lg"></i>
+              -->
+          </li> 
+          <li class="nav-item justify-content-center">
+            <a href="#" id="printpdf"class="mr-5"style="font-size:larger;"><i class="mr-1 fas fa-print fa-lg" id='printpdf'></i>Print</a>
+          </li>
+        </ul>
+        <form class="input-group date form-inline my-2 my-lg-2 w-50">
+          <input class="form-control mr-sm-2 text-center" style="background-color: black; color:whitesmoke;" type="search" placeholder="Select Date.." aria-label="Search">
+          <div class="input-group-addon" >    
+          </div>
+        </form>
       </div>
     </nav>
    
