--- a/dashboard_web/blueprints/users/templates/users/index.html
+++ b/dashboard_web/blueprints/users/templates/users/index.html
@@ -14,7 +14,7 @@
   <li class="error"><font color="red">{{error}}</font></li>
 {% endfor %}
 <div class = "container">
-    <div class = "row">
+    <div class = "row justify-content-center my-auto">
           <div class = "col-lg-12 chart-container"> 
             <div id="myChart"></div>
           </div>
