--- a/dashboard_web/static/css/custom.css
+++ b/dashboard_web/static/css/custom.css
@@ -21,7 +21,7 @@ footer {
 
   /* padding:2px; */
   margin-bottom:10px;
-  height:140vh;
+  height:950px;
   
 }
 .fa-input { font-family: FontAwesome, ‘Helvetica Neue’, Helvetica, Arial, sans-serif; }
@@ -35,7 +35,7 @@ footer {
 }
 .grid-container{
   overflow-y: auto;
-  max-height:100vh;
+  max-height:750px;
   border-radius: 14px;
   background: #fffbfb;
   box-shadow:  5px 5px 10px #888888, 
@@ -43,9 +43,12 @@ footer {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .chart-container{
-  height:120vh;
+  height:650px;
   margin-bottom:10px;
+  max-width:1150px;
+  min-width:300px;
 }
+
 #myChart{
   border-radius: 14px;
   background: #c0c0c0;
@@ -53,7 +56,9 @@ footer {
                -5px -5px 10px #f8f8f8;
   /* padding:2px; */
   margin-bottom:10px;
-  height:120vh;
+  height:650px;
+  max-width:1100px;
+  min-width:300px;
 }
 .gen-select li{
   display:inline;
@@ -73,6 +78,11 @@ footer {
   color: #303030;
 }
 
+@media screen and (max-width: 930px) {
+  #printpdf {
+   display: none;
+  }
+}
 footer a {
   text-decoration: none;
   color: #303030;
